--- a/popup.html
+++ b/popup.html
@@ -11,8 +11,13 @@
       <p id="cornea"><img src="cornea.png" style="float: left;"> <span id="c">C</span><span id="o">o</span><span id="r">r</span><span id="n">n</span><span id="e">e</span><span id="a">a</span> </p>
       <hr>
       <div class="wrapper">
-        <input type="checkbox" name="toggle" id="toggle" >
-        <label for="toggle"></label>
+        <input type="checkbox" name="toggle" id="toggle_overlay" class="toggle">
+        <label for="toggle_overlay"></label>
+      </div>
+
+      <div class="wrapper">
+        <input type="checkbox" name="toggle_notify" id="toggle_notify" class="toggle">
+        <label for="toggle_notify"></label>
       </div>
 
       <h4 class="bottom">Refresh all existing tabs after turning on <span id="c">C</span><span id="o">o</span><span id="r">r</span><span id="n">n</span><span id="e">e</span><span id="a">a</span></h4>
