Without OOP(includes notify working toggle transition but no functionality yet) v1.1

--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
   <body>
     <div id="status"> 
     
-      <p id="cornea"><img src="cornea.png" style="float: left;"> <span id="c">C</span><span id="o">o</span><span id="r">r</span><span id="n">n</span><span id="e">e</span><span id="a">a</span> </p>
+      <p id="cornea"><img src="cornea.png" style="float: left;"> &nbsp;  <span id="c">C</span><span id="o">o</span><span id="r">r</span><span id="n">n</span><span id="e">e</span><span id="a">a</span> </p>
       <hr>
       <div class="wrapper">
         <input type="checkbox" name="toggle" id="toggle_overlay" class="toggle">
