Notification feature updated with rich UI

--- a/popup.html
+++ b/popup.html
@@ -1,3 +1,5 @@
+
+<!-- Sorry for including inline styles! I was in hurry-->
 <!doctype html>
 <html>
   <head>
@@ -8,16 +10,21 @@
   <body>
     <div id="status"> 
     
-      <p id="cornea"><img src="cornea.png" style="float: left;"> &nbsp;  <span id="c">C</span><span id="o">o</span><span id="r">r</span><span id="n">n</span><span id="e">e</span><span id="a">a</span> </p>
-      <hr>
+      <p id="cornea"><img src="cornea.png" style="float: left; margin-top:7px; margin-left: 15px;"> &nbsp;  <span id="c">C</span><span id="o">o</span><span id="r">r</span><span id="n">n</span><span id="e">e</span><span id="a">a</span> </p>
+      <br>
       <div class="wrapper">
+        <img src="images/icon_1.png" width="30px" height="30px" style="float: left;">
+        <label class="labelsNaming">Eye Protection</label>
         <input type="checkbox" name="toggle" id="toggle_overlay" class="toggle">
-        <label for="toggle_overlay"></label>
+        <label for="toggle_overlay" style="float: right;"></label>
+
       </div>
 
       <div class="wrapper">
+        <img src="images/icon_2.png" width="30px" height="30px" style="float: left;">
+        <label class="labelsNaming">Eye Care</label>
         <input type="checkbox" name="toggle_notify" id="toggle_notify" class="toggle">
-        <label for="toggle_notify"></label>
+        <label for="toggle_notify" style="float: right;"></label>
       </div>
 
       <h4 class="bottom">Refresh all existing tabs after turning on <span id="c">C</span><span id="o">o</span><span id="r">r</span><span id="n">n</span><span id="e">e</span><span id="a">a</span></h4>
