Notification feature added with rich UI

--- a/popup.html
+++ b/popup.html
@@ -1,5 +1,9 @@
+<!--        popup html
+         =============
+        Karthik Samyak
+      Updated:  August 2017    -->
 
-<!-- Sorry for including inline styles! I was in hurry-->
+
 <!doctype html>
 <html>
   <head>
