--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,7 @@
   <body>
     <div id="status"> 
     
-      <p id="cornea"><img src="cornea.png" style="float: left; margin-top:0px; margin-left: 15px;"> &nbsp;  <span id="c">C</span><span id="o">o</span><span id="r">r</span><span id="n">n</span><span id="e">e</span><span id="a">a</span> </p>
+      <p id="cornea"><img src="images/cornea.png" style="float: left; margin-top:0px; margin-left: 15px;"> &nbsp;  <span id="c">C</span><span id="o">o</span><span id="r">r</span><span id="n">n</span><span id="e">e</span><span id="a">a</span> </p>
       <br>
       <div class="wrapper">
         <img src="images/icon_1.png" width="30px" height="30px" style="float: left;">
@@ -50,8 +50,8 @@
 
       <p class="bottom"> Version 1.0 alpha </p>  
     </div>
-   <script type="text/javascript" src="jquery.js"></script>
-   <script type="text/javascript" src="popup.js"></script>
+   <script type="text/javascript" src="jQuery/jquery.js"></script>
+   <script type="text/javascript" src="Javascripts/popup.js"></script>
    <script type="text/javascript" src="jQuery/jquery-ui.js"></script>
   </body>
 </html> 
